# public/api/swagger.json
@@ -19,6 +19,10 @@
     {
       "name": "User",
       "description": "Authentication and Users Api"
+    },
+    {
+      "name": "Contests",
+      "description": "Contests Api"
     }
   ],
   "schemes": [
@@ -214,7 +218,7 @@
       }
     },
     "/profile/token_reset": {
-      "post": {
+      "get": {
         "tags": [
           "User"
         ],
@@ -241,7 +245,71 @@
           }
         }
       }
-    }
+    },
+    "/contests/create": {
+      "post": {
+        "tags": [
+          "Contests"
+        ],
+        "summary": "Create contests",
+        "description": "Create contests",
+        "operationId": "contests.create",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Client Login",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "required": true
+                },
+                "goal": {
+                  "type": "string",
+                  "required": true,
+                  "minimum": "9"
+                },
+                "start_at": {
+                  "type": "string",
+                  "required": true,
+                  "example":"2018-09-19 14:43:19"
+                },
+                "expired_at": {
+                  "type": "string",
+                  "required": true,
+                  "example":"2018-09-19 14:43:19"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user": {
+                  "$ref": "#/definitions/User"
+                },
+                "token": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
   },
   "definitions": {
     "User": {
@@ -335,6 +403,38 @@
         },
         "updated_at": {
           "type": "string"
+        }
+      }
+    },
+    "contest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer"
+        },
+        "name": {
+          "type": "string"
+        },
+        "goal": {
+          "type": "string"
+        },
+        "start_at": {
+          "type": "string"
+        },
+        "expired_at": {
+          "type": "string"
+        },
+        "user_id": {
+          "type": "integer"
+        },
+        "winner_id": {
+          "type": "integer"
+        },
+        "creator": {
+          "$ref": "#/definitions/User"
+        },
+        "winner": {
+          "$ref": "#/definitions/User"
         }
       }
     }
