# routes/api.php
@@ -19,10 +19,14 @@ Route::post('/register','API\AuthController@register');
 
 
 Route::group(["middleware" => ['api-auth']], function ($router) {
-    Route::post('/profile/update','API\AuthController@update');
+
+    // profile
+    $router->post('/profile/update','API\AuthController@update');
+    $router->get('/profile/token_reset','API\AuthController@tokenReset');
 
 
-    Route::get('/profile/token_reset','API\AuthController@tokenReset');
+    // contests
+    $router->post('contests/create','API\ContestController@create');
 });
 
 
